--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.pkl filter=lfs diff=lfs merge=lfs -text
 static/logo.png filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+static/SmartFarming.png filter=lfs diff=lfs merge=lfs -text
